# objekt

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rust-toolchain.toml
.direnv/: flake-profile-1-link
crates/ciphers/: Cargo.toml
crates/ciphers/src/: hashing_traits.rs  lib.rs  sha256.rs
crates/macros_utils/: Cargo.toml
crates/macros_utils/src/: lib.rs  router.rs
server/: Cargo.toml
server/src/: main.rs
server/src/guards/: auth.rs  mod.rs  path.rs
server/src/providers/: fs.rs  memory.rs  mod.rs
server/src/routes/: mod.rs  root.rs
server/src/routes/auth/: mod.rs  user.rs
server/src/routes/store/: add.rs  entry.rs  list.rs  metadata.rs  mod.rs  purge.rs  remove.rs  update.rs  upsert.rs
server/src/structs/: metadata.rs  mod.rs  user.rs
server/src/utils/: mod.rs
store/: test:otro  test:otroxdxdd:hola:mas:keys
