[workspace]
resolver = "3"
members = ["crates/*", "server"]

[workspace.dependencies]
actix-web = { version = "4" }
tokio = { version = "1", features = ["full"] }
futures = "0"
tracing = "0"
tracing-subscriber = "0"
chrono = "0"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
