[package]
name = "server"
version = "0.1.0"
edition = "2024"

[features]
default = ["memory"]
memory = ["dep:dashmap"]

[dependencies]
tokio.workspace = true
actix-web.workspace = true
futures.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
chrono.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dependencies.dashmap]
optional = true
version = "6"

[dependencies.dotenvy]
version = "0"

[dependencies.macros_utils]
path = "../crates/macros_utils"

[dependencies.ciphers]
path = "../crates/ciphers"
